examples/invalid/semantics/redefine_upperscope.rs
fn main() {
    let a = 64;
    if a < 64 {
        let a = 46;
    }
}